Changed box template element and it's styles + added ad in user page + fixed header z-index issue on item page

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/GeneralWithStatic.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/GeneralWithStatic.less
@@ -150,11 +150,79 @@ body {
     position: relative;
 }
 
+.box-template-flex {
+    .displayFlex !important;
+    .align-items(stretch) !important;
+    .justifyContet(space-between) !important;
+    flex-direction: column !important;
+    padding: 10px !important;
+
+    > * {
+        box-sizing: border-box;
+    }
+
+    .info {
+        color: @textColorBlack;
+        flex-grow: 1;
+        .displayFlex;
+        .align-items(flex-start);
+        .justifyContet(space-between);
+        flex-direction: column;
+
+        .top {
+            .displayFlex;
+            .align-items(center);
+            .justifyContet(flex-start);
+
+            .icon {
+                width: 60px;
+                height: 60px;
+                line-height: 60px;
+                text-align: center;
+                color: @textColorWhite;
+                font-size: 28px;
+                text-transform: capitalize;
+                flex-shrink: 0;
+            }
+
+            h5 {
+                font-size: 22px;
+                line-height: 29px;
+                height: 58px;
+                margin: 0;
+                padding: 0 10px;
+                text-transform: capitalize;
+                font-weight: normal;
+            }
+        }
+
+        .bottom span {
+            font-size: 12px;
+            display: block;
+            margin-top: 5px;
+        }
+    }
+
+    .stats {
+        border-top: 1px solid;
+        .displayFlex;
+        .align-items(center);
+        .justifyContet(space-between);
+        padding-top: 10px;
+        margin-top: 10px;
+        height: 24px;
+        font-size: 12px;
+
+        .members-count, .items-count {
+            color: @textColorBlack;
+        }
+    }
+}
+
 .box-style {
     width: 100%;
     background: @textColorWhite;
     box-shadow: 0px 1px 5px 0 rgba(0, 0, 0, 0.34);
-    padding: 15px 15px 30px 15px;
     display: block;
     width: 100%;
     height: 179px;
@@ -239,68 +307,32 @@ body {
             padding-right: 6px;
         }
     }
-
-    .display .number {
-        float: left;
-        display: inline-block;
-        height: 116px;
-        width: 100%;
-
-        h3, h5 {
-            display: -webkit-box;
-            -webkit-line-clamp: 2;
-            -webkit-box-orient: vertical;
-            margin: 0 0 14px 0;
-            padding: 0;
-            font-size: 25px;
-            line-height: 29px;
-            height: 58px;
-            overflow: hidden;
-            width: calc(100% - 20px);
-            -ms-word-wrap: break-word;
-            word-wrap: break-word;
-        }
-
-        small {
-            font-size: 12px;
-            font-weight: 400;
-            text-transform: uppercase;
-            height: 16px;
-            display: inline-block;
-            max-width: 100%;
-        }
-    }
-
-    .progress-info {
-        clear: both;
-        position: relative;
-
-        .progress {
-            margin: 0;
-            height: 1px;
-            clear: both;
-            display: block;
-        }
-
-        .status {
-            margin-top: 18px;
-
-            .status-title {
-                float: left;
-                display: inline-block;
-            }
-
-            .status-number {
-                float: right;
-                display: inline-block;
-            }
-        }
-    }
 }
 
 #intercom-container, #intercom-launcher {
     z-index: 120;
 }
+
+/*#region: multi line ellipsis classes*/
+.multi-line-ellipsis {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -ms-word-break: break-word;
+    word-break: break-word;
+
+
+    &.limit-three {
+        -webkit-line-clamp: 3;
+    }
+
+
+    &.limit-two {
+        -webkit-line-clamp: 2;
+    }
+}
+
+/*#endregion*/
 
 
 /*#region: new button classes*/
