--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/library.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/library.less
@@ -52,7 +52,7 @@
             width: 100%;
             flex-grow: 1;
             border-bottom: 1px solid;
-            margin-bottom: 15px;
+            margin-bottom: 10px;
         }
 
         .box-style {
@@ -60,7 +60,7 @@
             flex-direction: column;
             .align-items(flex-start);
             .justifyContet(space-between);
-            padding: 15px;
+            padding: 10px;
 
             &:hover .status .lock {
                 background: #f0f0f0;
